# research-paradigm-shift-detector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  SETUP.md  pyproject.toml  requirements.txt  setup.cfg  setup_env.py
.github/workflows/: codeql.yml
data/: generate_sample.py  sample_corpus.jsonl
examples/: analyze_attention.py
results/: shift_analysis.json
stip/: __init__.py  detector.py  embedding.py  shift_analyzer.py
stip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_stip.py
