[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stip"
version = "0.1.0"
description = "Structural Timeline of Intellectual Progression - Detect semantic paradigm shifts in research literature"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "STIP Contributors"}
]
keywords = [
    "nlp",
    "semantic-shift",
    "paradigm-detection",
    "temporal-analysis",
    "research-analytics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]
dependencies = [
    "spacy>=3.5.0,<4.0",
    "scispacy>=0.5.0,<0.6.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "numpy>=1.21.0,<1.27.0",
    "pandas>=1.5.0,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "jsonlines>=3.0.0",
    "requests>=2.28.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "pre-commit>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/stip-project/stip"
Repository = "https://github.com/stip-project/stip.git"
Issues = "https://github.com/stip-project/stip/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stip*"]

[tool.setuptools.package-data]
stip = ["*.pyi"]
